k8s/computer_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: computer-deployment
  labels:
    app: k8s-app
spec:
  selector:
    matchLabels:
      app: k8s-app
  replicas: 3
  template:
    metadata:
      labels:
        app: k8s-app
    spec:
      containers:
        - name: computer-app
          image: ghostfed/computer_service
          ports:
            - containerPort: 9000
