k8s/computer_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: computer
spec:
  selector:
    app: k8s-app
  ports:
    - port: 9000
      targetPort: 9000
