k8s/result_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
spec:
  selector:
    app: k8s-app
  ports:
    - port: 9001
      targetPort: 9001
