k8s/user_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
spec:
  selector:
    app: k8s-user-app
  ports:
    - name: http
      port: 8081
