k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-ingress
spec:
  rules:
    - host: rsp.game
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user
                port:
                  number: 8081
